@@ -10,9 +10,34 @@ usr/lib/ipsec/plugins/libstrongswan-medsrv.so
 usr/lib/ipsec/plugins/libstrongswan-medcli.so
 usr/lib/ipsec/plugins/libstrongswan-tnc-tnccs.so
 usr/lib/ipsec/plugins/libstrongswan-unity.so
-usr/lib/ipsec/plugins/libstrongswan-xauth-eap.so
-usr/lib/ipsec/plugins/libstrongswan-xauth-generic.so
-usr/lib/ipsec/plugins/libstrongswan-xauth-pam.so
+usr/lib/ipsec/plugins/libstrongswan-xauth-*.so
+# standard configuration files
+usr/share/strongswan/templates/config/plugins/addrblock.conf
+usr/share/strongswan/templates/config/plugins/certexpire.conf
+usr/share/strongswan/templates/config/plugins/eap-*.conf
+usr/share/strongswan/templates/config/plugins/error-notify.conf
+usr/share/strongswan/templates/config/plugins/ha.conf
+usr/share/strongswan/templates/config/plugins/led.conf
+usr/share/strongswan/templates/config/plugins/lookip.conf
+usr/share/strongswan/templates/config/plugins/medsrv.conf
+usr/share/strongswan/templates/config/plugins/medcli.conf
+usr/share/strongswan/templates/config/plugins/tnc-tnccs.conf
+usr/share/strongswan/templates/config/plugins/unity.conf
+usr/share/strongswan/templates/config/plugins/xauth-*.conf
+usr/share/strongswan/templates/config/strongswan.d/tnc.conf
+etc/strongswan.d/tnc.conf
+etc/strongswan.d/charon/addrblock.conf
+etc/strongswan.d/charon/certexpire.conf
+etc/strongswan.d/charon/eap-*.conf
+etc/strongswan.d/charon/error-notify.conf
+etc/strongswan.d/charon/ha.conf
+etc/strongswan.d/charon/led.conf
+etc/strongswan.d/charon/lookip.conf
+etc/strongswan.d/charon/medsrv.conf
+etc/strongswan.d/charon/medcli.conf
+etc/strongswan.d/charon/tnc-tnccs.conf
+etc/strongswan.d/charon/unity.conf
+etc/strongswan.d/charon/xauth-*.conf
 # support libs
 usr/lib/ipsec/libfast.so*
 usr/lib/ipsec/libpttls.so*
