@@ -1,4 +1,4 @@
-# libstrongswan
+# libstrongswan plugins
 usr/lib/ipsec/plugins/libstrongswan-ccm.so
 usr/lib/ipsec/plugins/libstrongswan-cmac.so
 usr/lib/ipsec/plugins/libstrongswan-ctr.so
@@ -7,3 +7,20 @@ usr/lib/ipsec/plugins/libstrongswan-gcrypt.so
 usr/lib/ipsec/plugins/libstrongswan-ldap.so
 usr/lib/ipsec/plugins/libstrongswan-pkcs11.so
 usr/lib/ipsec/plugins/libstrongswan-test-vectors.so
+# default configuration files
+usr/share/strongswan/templates/config/plugins/ccm.conf
+usr/share/strongswan/templates/config/plugins/cmac.conf
+usr/share/strongswan/templates/config/plugins/ctr.conf
+usr/share/strongswan/templates/config/plugins/curl.conf
+usr/share/strongswan/templates/config/plugins/gcrypt.conf
+usr/share/strongswan/templates/config/plugins/ldap.conf
+usr/share/strongswan/templates/config/plugins/pkcs11.conf
+usr/share/strongswan/templates/config/plugins/test-vectors.conf
+etc/strongswan.d/charon/ccm.conf
+etc/strongswan.d/charon/cmac.conf
+etc/strongswan.d/charon/ctr.conf
+etc/strongswan.d/charon/curl.conf
+etc/strongswan.d/charon/gcrypt.conf
+etc/strongswan.d/charon/ldap.conf
+etc/strongswan.d/charon/pkcs11.conf
+etc/strongswan.d/charon/test-vectors.conf
