@@ -1,4 +1,4 @@
-# libstrongswan
+# libstrongswan plugins
 usr/lib/ipsec/libstrongswan.so*
 usr/lib/ipsec/plugins/libstrongswan-aes.so
 usr/lib/ipsec/plugins/libstrongswan-constraints.so
@@ -23,8 +23,61 @@ usr/lib/ipsec/plugins/libstrongswan-sha2.so
 usr/lib/ipsec/plugins/libstrongswan-sshkey.so
 usr/lib/ipsec/plugins/libstrongswan-x509.so
 usr/lib/ipsec/plugins/libstrongswan-xcbc.so
-# libhydra
+# config files
+usr/share/strongswan/templates/config/plugins/aes.conf
+usr/share/strongswan/templates/config/plugins/constraints.conf
+usr/share/strongswan/templates/config/plugins/dnskey.conf
+usr/share/strongswan/templates/config/plugins/fips-prf.conf
+usr/share/strongswan/templates/config/plugins/gmp.conf
+usr/share/strongswan/templates/config/plugins/hmac.conf
+usr/share/strongswan/templates/config/plugins/md5.conf
+usr/share/strongswan/templates/config/plugins/nonce.conf
+usr/share/strongswan/templates/config/plugins/pgp.conf
+usr/share/strongswan/templates/config/plugins/pem.conf
+usr/share/strongswan/templates/config/plugins/pkcs1.conf
+usr/share/strongswan/templates/config/plugins/pkcs7.conf
+usr/share/strongswan/templates/config/plugins/pkcs8.conf
+usr/share/strongswan/templates/config/plugins/pkcs12.conf
+usr/share/strongswan/templates/config/plugins/pubkey.conf
+usr/share/strongswan/templates/config/plugins/random.conf
+usr/share/strongswan/templates/config/plugins/rc2.conf
+usr/share/strongswan/templates/config/plugins/revocation.conf
+usr/share/strongswan/templates/config/plugins/sha1.conf
+usr/share/strongswan/templates/config/plugins/sha2.conf
+usr/share/strongswan/templates/config/plugins/sshkey.conf
+usr/share/strongswan/templates/config/plugins/x509.conf
+usr/share/strongswan/templates/config/plugins/xcbc.conf
+etc/strongswan.d/charon/aes.conf
+etc/strongswan.d/charon/constraints.conf
+etc/strongswan.d/charon/dnskey.conf
+etc/strongswan.d/charon/fips-prf.conf
+etc/strongswan.d/charon/gmp.conf
+etc/strongswan.d/charon/hmac.conf
+etc/strongswan.d/charon/md5.conf
+etc/strongswan.d/charon/nonce.conf
+etc/strongswan.d/charon/pgp.conf
+etc/strongswan.d/charon/pem.conf
+etc/strongswan.d/charon/pkcs1.conf
+etc/strongswan.d/charon/pkcs7.conf
+etc/strongswan.d/charon/pkcs8.conf
+etc/strongswan.d/charon/pkcs12.conf
+etc/strongswan.d/charon/pubkey.conf
+etc/strongswan.d/charon/random.conf
+etc/strongswan.d/charon/rc2.conf
+etc/strongswan.d/charon/revocation.conf
+etc/strongswan.d/charon/sha1.conf
+etc/strongswan.d/charon/sha2.conf
+etc/strongswan.d/charon/sshkey.conf
+etc/strongswan.d/charon/x509.conf
+etc/strongswan.d/charon/xcbc.conf
+# libhydra plugins
 usr/lib/ipsec/libhydra.so*
 usr/lib/ipsec/plugins/libstrongswan-attr.so
 usr/lib/ipsec/plugins/libstrongswan-resolve.so
+# config files
+usr/share/strongswan/templates/config/strongswan.conf
+usr/share/strongswan/templates/config/plugins/attr.conf
+usr/share/strongswan/templates/config/plugins/resolve.conf
+etc/strongswan.d/charon/attr.conf
+etc/strongswan.d/charon/resolve.conf
 etc/strongswan.conf
