@@ -1,1 +1,5 @@
 usr/lib/ipsec/charon
+usr/share/strongswan/templates/config/strongswan.d/charon.conf
+usr/share/strongswan/templates/config/strongswan.d/charon-logging.conf
+etc/strongswan.d/charon-logging.conf
+etc/strongswan.d/charon.conf
