@@ -1,2 +1,4 @@
 usr/lib/ipsec/libcharon*
 usr/lib/ipsec/plugins/libstrongswan-socket-default.so
+usr/share/strongswan/templates/config/plugins/socket-default.conf
+etc/strongswan.d/charon/socket-default.conf
